added slide bar section + responsived it for all devices

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 <body>
     <header class="lg:mx-40 mx-1">
         <nav>
+            <!-- navbar started -->
             <div class="navbar lg:bg-rose-500 mt-10 lg:rounded-full h-24 lg:px-7 px-0">
                 <div class="navbar-start">
                     <div class="navbar-start">
@@ -61,6 +62,71 @@
                   </div>
                 </div>
               </div>  
+              <!-- navbar Ended -->
         </nav>
             </header>
+            <main class="lg:mx-44 mx-4">
+<!-- slide section starting -->
+<section>
+    <div class="carousel w-full h-full mt-10 rounded-lg">
+      <div id="slide1" class=" hero h-[220px] lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner1.png');">
+        <div class="hero-overlay bg-opacity-70"></div>
+        <div class="text-center items-center -mt-16 lg:-mt-72">
+        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+        </div>
+      <div class="mt-20 lg:-mt-12 text-center">
+        <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+        <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+    </div>
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+          <a href="#slide4" class="btn btn-circle text-white border-none bg-black">❮</a> 
+          <a href="#slide2" class="btn btn-circle text-white border-none bg-black">❯</a>
+        </div>
+      </div> 
+      <div id="slide2" class="rounded hero lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner2.png');">
+        <div class="hero-overlay bg-opacity-70"></div>
+        <div class="text-center items-center -mt-16 lg:-mt-72">
+        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+        </div>
+        <div class="mt-20 lg:-mt-12 text-center">
+            <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+            <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+        </div>
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+          <a href="#slide1" class="btn btn-circle text-white border-none bg-black">❮</a> 
+          <a href="#slide3" class="btn btn-circle text-white border-none bg-black">❯</a>
+        </div>
+      </div> 
+      <div id="slide3" class="rounded hero lg:h-[580px] carousel-item relative w-full bg-auto" style="background-image: url('images/banner3.png');">
+        <div class="hero-overlay bg-opacity-70"></div>
+        <div class="text-center items-center -mt-16 lg:-mt-72">
+        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+        </div>
+        <div class="mt-20 lg:-mt-12 text-center">
+            <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+            <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+        </div>
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+          <a href="#slide2" class="btn btn-circle text-white border-none bg-black">❮</a> 
+          <a href="#slide4" class="btn btn-circle text-white border-none bg-black">❯</a>
+        </div>
+      </div> 
+      <div id="slide4" class="rounded hero lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner1.png');">
+        <div class="hero-overlay bg-opacity-70"></div>
+        <div class="text-center items-center -mt-16 lg:-mt-72">
+        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+        </div>
+        <div class="mt-20 lg:-mt-12 text-center">
+            <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+            <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+        </div>
+        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+          <a href="#slide3" class="btn btn-circle text-white border-none bg-black">❮</a> 
+          <a href="#slide1" class="btn btn-circle text-white border-none bg-black">❯</a>
+        </div>
+      </div> 
+    </div>
+  </section>
+  <!-- slide section ended -->
+            </main>
 </body>
