--- a/index.html
+++ b/index.html
@@ -128,5 +128,136 @@
     </div>
   </section>
   <!-- slide section ended -->
+  <!-- Deal of the day starting -->
+  <section>
+    <div class="my-4 flex flex-col lg:flex-row lg:justify-between items-center justify-center mt-10 text-center lg:text-left">
+      <div class="">
+          <h1 class="text-[40px] font-lato font-semibold">Deal of the day</h1>
+          <p class="font-lato">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+      </div>
+      <div class="items-center justify-center text-center mt-3">
+          <div class="grid grid-flow-col gap-5 text-center auto-cols-max">
+              <div class="flex flex-col">
+                <span class="countdown font-lato text-4xl font-bold">
+                  <span style="--value:29;"></span>
+                </span>
+                days
+              </div> 
+              <div class="flex flex-col">
+                <span class="countdown font-lato text-4xl font-bold">
+                  <span style="--value:10;"></span>
+                </span>
+                hours
+              </div> 
+              <div class="flex flex-col">
+                <span class="countdown font-lato text-4xl font-bold">
+                  <span style="--value:24;"></span>
+                </span>
+                min
+              </div> 
+              <div class="flex flex-col">
+                <span class="countdown font-lato text-4xl font-bold">
+                  <span style="--value:26;"></span>
+                </span>
+                sec
+              </div>
+            </div>
+      </div>
+      </div>
+    <div class=" grid lg:grid-cols-4 md:grid-cols-2 gap-5 items-center justify-around">
+      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+          <div class="card-body text-center items-center">
+              <img src="images/fruit6.png" alt="car!"/>
+              <p class="text-xl font-bold">12.90$ - 18.85$</p>
+          </div>
+          <div class="mx-20 -mt-5">
+          <hr>
+      </div>
+          <div class=" my-5 text-center items-center justify-center">
+            <h2 class="mb-2">Apples</h2>
+            <div class="rating mb-4">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+            </div>
+            <div class="card-actions justify-center">
+              <button class="btn text-rose-500"><a href="#popupCard-1">Details</a></button>
+            </div>
+          </div>
+        </div>
+      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+          <div class="card-body text-center items-center">
+              <img src="images/fruit7.png" alt="car!"/>
+              <p class="text-xl font-bold">12.90$ - 18.85$</p>
+          </div>
+          <div class="mx-20 -mt-5">
+          <hr>
+      </div>
+          <div class=" my-5 text-center items-center justify-center">
+            <h2 class="mb-2">Orange</h2>
+            <div class="rating mb-4">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+            </div>
+            <div class="card-actions justify-center">
+              <button class="btn text-rose-500"><a href="#popupCard-2">Details</a></button>
+            </div>
+          </div>
+        </div>
+      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+          <div class="card-body text-center items-center">
+              <img src="images/fruit8.png" alt="car!"/>
+              <p class="text-xl font-bold">12.90$ - 18.85$</p>
+          </div>
+          <div class="mx-20 -mt-5">
+          <hr>
+      </div>
+          <div class=" my-5 text-center items-center justify-center">
+            <h2 class="mb-2">Red Dragon</h2>
+            <div class="rating mb-4">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+            </div>
+            <div class="card-actions justify-center">
+              <button class="btn text-rose-500"><a href="#popupCard-3">Details</a></button>
+            </div>
+          </div>
+        </div>
+      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+          <div class="card-body text-center items-center">
+              <img src="images/fruit9.png" alt="car!"/>
+              <p class="text-xl font-bold">12.90$ - 18.85$</p>
+          </div>
+          <div class="mx-20 -mt-5">
+          <hr>
+      </div>
+          <div class=" my-5 text-center items-center justify-center">
+            <h2 class="mb-2">Bananas</h2>
+            <div class="rating mb-4">
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+              <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+            </div>
+            <div class="card-actions justify-center">
+              <button class="btn text-rose-500"><a href="#popupCard-4">Details</a></button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="mt-5 items-center justify-center text-center">
+        <button class="btn bg-rose-500 text-white">Shop All</button>
+      </div>
+</section>
+  <!-- Deal of the day ended -->
             </main>
 </body>
