added popup card on details button

--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     .font-lato{
         font-family: 'Lato', sans-serif;
     }
+    .popup {
+        display: none;
+        position: fixed;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background-color: rgba(0, 0, 0, 0.5);
+        z-index: 999;
+      }
+      .popup:target {
+        display: flex;}
 </style>
 </head>
 <body>
@@ -259,5 +271,89 @@
       </div>
 </section>
   <!-- Deal of the day ended -->
+  <section>
+    <!-- Popup Card started-->
+    <div id="popupCard-1" class="popup items-center justify-center">
+          <div class="card w-96  rounded bg-white shadow-xl">
+            <div class="card-body text-center items-center">
+                <img src="images/fruit6.png" alt="car!"/>
+                <p class="text-xl font-bold">Apple</p>
+                <h2 class="mb-2">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+                <div class="rating mb-4">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                </div>
+                <div class="card-actions justify-end">
+                  <button class="btn bg-white border-rose-500 text-rose-500"><a href="#">Close</a></button>
+                  <button class="btn bg-rose-500 text-white">Buy Now</button>
+                </div>
+              </div>
+          </div>
+      </div>
+    <div id="popupCard-2" class="popup items-center justify-center">
+          <div class="card w-96  rounded bg-white shadow-xl">
+            <div class="card-body text-center items-center">
+                <img src="images/fruit7.png" alt="car!"/>
+                <p class="text-xl font-bold">Orange</p>
+                <h2 class="mb-2">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+                <div class="rating mb-4">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                </div>
+                <div class="card-actions justify-end">
+                  <button class="btn bg-white border-rose-500 text-rose-500"><a href="#">Close</a></button>
+                  <button class="btn bg-rose-500 text-white">Buy Now</button>
+                </div>
+              </div>
+          </div>
+      </div>
+    <div id="popupCard-3" class="popup items-center justify-center">
+          <div class="card w-96  rounded bg-white shadow-xl">
+            <div class="card-body text-center items-center">
+                <img src="images/fruit8.png" alt="car!"/>
+                <p class="text-xl font-bold">Red Dragon</p>
+                <h2 class="mb-2">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+                <div class="rating mb-4">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                </div>
+                <div class="card-actions justify-end">
+                  <button class="btn bg-white border-rose-500 text-rose-500"><a href="#">Close</a></button>
+                  <button class="btn bg-rose-500 text-white">Buy Now</button>
+                </div>
+              </div>
+          </div>
+      </div>
+    <div id="popupCard-4" class="popup items-center justify-center">
+          <div class="card w-96  rounded bg-white shadow-xl">
+            <div class="card-body text-center items-center">
+                <img src="images/fruit9.png" alt="car!"/>
+                <p class="text-xl font-bold">Bananas</p>
+                <h2 class="mb-2">Professional employees are there for you to pick the most amazing and fresh fruits.</h2>
+                <div class="rating mb-4">
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" checked />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                  <input type="radio" name="rating-2" class="mask mask-star-2 bg-rose-500" />
+                </div>
+                <div class="card-actions justify-end">
+                  <button class="btn bg-white border-rose-500 text-rose-500"><a href="#">Close</a></button>
+                  <button class="btn bg-rose-500 text-white">Buy Now</button>
+                </div>
+              </div>
+          </div>
+      </div>
+<!-- Popup Card ended-->
+    </section>
             </main>
 </body>
