added meet our team section + responsived it

--- a/index.html
+++ b/index.html
@@ -355,5 +355,60 @@
       </div>
 <!-- Popup Card ended-->
     </section>
+    <!-- meet our team section start -->
+    <section>
+        <div class="my-10 hero h-[1400px] md:h-[750px] lg:h-[650px] rounded-lg" style="background-image: url(images/team.png);">
+          <div class="hero-overlay bg-opacity-60 rounded-lg"></div>
+          <div class=" text-center text-white">
+            <div class="max-w-[520px] p-10">
+              <h1 class="font-lato mb-5 text-5xl font-bold lg:-mt-56 md:-mt-80 -mt-[620px]">Meet our team</h1>
+              <p class="font-lato mb-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+            </div>
+          </div>
+          <div class="mt-[220px] lg:mt-24 grid lg:grid-cols-4 gap-5 md:gap-x-28 lg:gap-24 justify-around md:grid-cols-2">
+              <div class="text-center text-white font-lato">
+                <img src="images/member1.png" alt="">
+                <h4 class="my-1 text-xl">Awlad Hossain</h4>
+              <p>Fruits Expert</p>
+              <div class="flex gap-3 items-center justify-center mt-2">
+              <img class="w-5" src="images/facebook 1.svg" alt="">
+              <img class="w-5" src="images/twitter (1) 1.svg" alt="">
+              <img class="w-5" src="images/linkedin 1.svg" alt="">
+            </div>
+              </div>
+              <div class="text-center text-white font-lato">
+                <img src="images/member2.png" alt="">
+                <h4 class="my-1 text-xl">Safia Chowdhury</h4>
+              <p>Fruits Expert</p>
+              <div class="flex gap-3 items-center justify-center mt-2">
+              <img class="w-5" src="images/facebook 1.svg" alt="">
+              <img class="w-5" src="images/twitter (1) 1.svg" alt="">
+              <img class="w-5" src="images/linkedin 1.svg" alt="">
+            </div>
+              </div>
+              <div class="text-center text-white font-lato">
+                <img src="images/member3.png" alt="">
+                <h4 class="my-1 text-xl">Rakib Hossain</h4>
+              <p>Fruits Expert</p>
+              <div class="flex gap-3 items-center justify-center mt-2">
+              <img class="w-5" src="images/facebook 1.svg" alt="">
+              <img class="w-5" src="images/twitter (1) 1.svg" alt="">
+              <img class="w-5" src="images/linkedin 1.svg" alt="">
+            </div>
+              </div>
+              <div class="text-center text-white font-lato">
+                <img src="images/member4.png" alt="">
+                <h4 class="my-1 text-xl">Chaity</h4>
+              <p>Fruits Expert</p>
+              <div class="flex gap-3 items-center justify-center mt-2">
+              <img class="w-5" src="images/facebook 1.svg" alt="">
+              <img class="w-5" src="images/twitter (1) 1.svg" alt="">
+              <img class="w-5" src="images/linkedin 1.svg" alt="">
+            </div>
+              </div>
+            </div>
+            </div>
+      </section>
+      <!-- meet our team section end -->
             </main>
 </body>
