--- a/index.html
+++ b/index.html
@@ -410,5 +410,98 @@
             </div>
       </section>
       <!-- meet our team section end -->
+      <!-- why Choose us section started  -->
+      <section class="mt-10">
+        <div class="text-center my-16">
+          <h1 class="font-lato text-4xl lg:text-5xl font-black">Why Choose Us</h1>
+          <p class="font-eb text-xl mt-5">Contrary to popular belief, is not simply random text. It has roots in a piece of classical <br> Latin literature from 45 BC, making it over 2000 years old.</p>
+        </div>
+        <div class="hero lg:h-[450px] h-[1600px] bg-white flex flex-col lg:flex-row lg:justify-between">
+          <div class="hero-content flex-col lg:flex-row lg:flex-row-reverse lg:justify-between lg:w-3/5">
+            <div class="lg:ml-20">
+            <img src="images/whychoose1.png" class="h-auto lg:w-[360px]  rounded-lg shadow-2xl" />
+          </div>
+            <div>
+              <div class="lg:flex items-center justify-center text-center lg:text-left gap-2">
+                <div class="">
+                  <button class="btn btn-circle w-16 h-16"><img class="w-10 rounded-full" src="images/group 1.svg" alt=""></button>
+                </div>
+                <div class="font-lato font-bold mt-3 text-center lg:text-left">
+                  <h1 class="text-2xl">Dedicated Team</h1>
+                  <div class="flex justify-center lg:justify-start"> 
+                    <hr class="my-2 border-t-3 border-black w-28"> 
+                  </div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+              <div class="my-4 lg:flex items-center justify-center text-center lg:text-left gap-2">
+                <div class="">
+                  <button class="btn btn-circle w-16 h-16"><img class="w-10 rounded-full" src="images/love 1.svg" alt=""></button>
+                </div>
+                <div class="font-lato font-bold mt-3 text-center lg:text-left">
+                  <h1 class="text-2xl">Fresh is Best</h1>
+                  <div class="flex justify-center lg:justify-start"> 
+                    <hr class="my-2 border-t-3 border-black w-28"> 
+                  </div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+              <div class="lg:flex items-center justify-center text-center lg:text-left gap-2">
+                <div class="">
+                  <button class="btn btn-circle w-16 h-16"><img class="w-10 rounded-full" src="images/gift-box 1.svg" alt=""></button>
+                </div>
+                <div class="font-lato font-bold mt-3 text-center lg:text-left">
+                  <h1 class="text-2xl">Gift Certificates</h1>
+                  <div class="flex justify-center lg:justify-start"> 
+                    <hr class="my-2 border-t-3 border-black w-28"> 
+                  </div>
+                  <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="lg:text-right text-center lg:w-2/5">
+            <div class="lg:flex items-center gap-2 lg:flex-row-reverse">
+              <div class="">
+                <button class="btn btn-circle w-16 h-16"><img class="w-10 rounded-full" src="images/fruit 1.svg" alt=""></button>
+              </div>
+              <div class="font-lato font-bold mt-3 text-center lg:text-right">
+                <h1 class="text-2xl">Integrated Supplier</h1>
+                <div class="flex justify-center lg:justify-end"> 
+                  <hr class="my-2 border-t-3 border-black w-28"> 
+                </div>
+                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            
+            <div class="lg:flex items-center gap-2 lg:flex-row-reverse mt-4">
+              <div class="">
+                <button class="btn btn-circle w-16 h-16"><img class="w-10 rounded-full" src="images/ice-cream 1.svg" alt=""></button>
+              </div>
+              <div class="font-lato font-bold mt-3 text-center lg:text-right">
+                <h1 class="text-2xl">Sustainable Practice</h1>
+                <div class="flex justify-center lg:justify-end">
+                  <hr class="my-2 border-t-3 border-black w-28"> 
+                </div>
+                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            
+            <div class="lg:flex items-center gap-2 lg:flex-row-reverse my-4">
+              <div class="">
+                <button class="btn btn-circle w-16 h-16"><img class="w-10 rounded-full" src="images/like 1.svg" alt=""></button>
+              </div>
+              <div class="font-lato font-bold mt-3 text-center lg:text-right">
+                <h1 class="text-2xl">The Benefits Only</h1>
+                <div class="flex justify-center lg:justify-end"> 
+                  <hr class="my-2 border-t-3 border-black w-28"> 
+                </div>
+                <p>Professional employees are there for you to pick <br> the most amazing and fresh fruits.</p>
+              </div>
+            </div>
+            </div>
+        </div>
+      </section>
+      <!-- why Choose us section ended  -->
             </main>
 </body>
