added a div in slide section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="images/logo.png" type="svg">
-    <title>Frouts shop</title>
+    <title>Frouts Burst</title>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
 <script src="https://cdn.tailwindcss.com"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
 </style>
 </head>
 <body>
-    <header class="lg:mx-40 mx-1">
+    <header class="lg:mx-40 mx-4">
         <nav>
             <!-- navbar started -->
             <div class="navbar lg:bg-rose-500 mt-10 lg:rounded-full h-24 lg:px-7 px-0">
@@ -80,68 +80,99 @@
             <main class="lg:mx-44 mx-4">
 <!-- slide section starting -->
 <section>
-    <div class="carousel w-full h-full mt-10 rounded-lg">
-      <div id="slide1" class=" hero h-[220px] lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner1.png');">
-        <div class="hero-overlay bg-opacity-70"></div>
-        <div class="text-center items-center -mt-16 lg:-mt-72">
-        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
-        </div>
-      <div class="mt-20 lg:-mt-12 text-center">
-        <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
-        <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+  <div class="container">
+    <div class="relative">
+      <div class="carousel w-full h-full mt-5 rounded-lg">
+              <div id="slide1" class=" hero h-[220px] lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner1.png');">
+                <div class="hero-overlay bg-opacity-70"></div>
+                <div class="text-center items-center -mt-16 lg:-mt-72">
+                <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+                </div>
+              <div class="mt-20 lg:-mt-12 text-center">
+                <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+                <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+            </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+                  <a href="#slide4" class="btn btn-circle text-white border-none bg-black">❮</a> 
+                  <a href="#slide2" class="btn btn-circle text-white border-none bg-black">❯</a>
+                </div>
+              </div> 
+              <div id="slide2" class="rounded hero lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner2.png');">
+                <div class="hero-overlay bg-opacity-70"></div>
+                <div class="text-center items-center -mt-16 lg:-mt-72">
+                <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+                </div>
+                <div class="mt-20 lg:-mt-12 text-center">
+                    <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+                    <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+                  <a href="#slide1" class="btn btn-circle text-white border-none bg-black">❮</a> 
+                  <a href="#slide3" class="btn btn-circle text-white border-none bg-black">❯</a>
+                </div>
+              </div> 
+              <div id="slide3" class="rounded hero lg:h-[580px] carousel-item relative w-full bg-auto" style="background-image: url('images/banner3.png');">
+                <div class="hero-overlay bg-opacity-70"></div>
+                <div class="text-center items-center -mt-16 lg:-mt-72">
+                <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+                </div>
+                <div class="mt-20 lg:-mt-12 text-center">
+                    <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+                    <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+                  <a href="#slide2" class="btn btn-circle text-white border-none bg-black">❮</a> 
+                  <a href="#slide4" class="btn btn-circle text-white border-none bg-black">❯</a>
+                </div>
+              </div> 
+              <div id="slide4" class="rounded hero lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner1.png');">
+                <div class="hero-overlay bg-opacity-70"></div>
+                <div class="text-center items-center -mt-16 lg:-mt-72">
+                <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
+                </div>
+                <div class="mt-20 lg:-mt-12 text-center">
+                    <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
+                    <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
+                </div>
+                <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
+                  <a href="#slide3" class="btn btn-circle text-white border-none bg-black">❮</a> 
+                  <a href="#slide1" class="btn btn-circle text-white border-none bg-black">❯</a>
+                </div>
+              </div> 
+            </div>
     </div>
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
-          <a href="#slide4" class="btn btn-circle text-white border-none bg-black">❮</a> 
-          <a href="#slide2" class="btn btn-circle text-white border-none bg-black">❯</a>
-        </div>
-      </div> 
-      <div id="slide2" class="rounded hero lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner2.png');">
-        <div class="hero-overlay bg-opacity-70"></div>
-        <div class="text-center items-center -mt-16 lg:-mt-72">
-        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
-        </div>
-        <div class="mt-20 lg:-mt-12 text-center">
-            <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
-            <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
-        </div>
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
-          <a href="#slide1" class="btn btn-circle text-white border-none bg-black">❮</a> 
-          <a href="#slide3" class="btn btn-circle text-white border-none bg-black">❯</a>
-        </div>
-      </div> 
-      <div id="slide3" class="rounded hero lg:h-[580px] carousel-item relative w-full bg-auto" style="background-image: url('images/banner3.png');">
-        <div class="hero-overlay bg-opacity-70"></div>
-        <div class="text-center items-center -mt-16 lg:-mt-72">
-        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
-        </div>
-        <div class="mt-20 lg:-mt-12 text-center">
-            <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
-            <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
-        </div>
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
-          <a href="#slide2" class="btn btn-circle text-white border-none bg-black">❮</a> 
-          <a href="#slide4" class="btn btn-circle text-white border-none bg-black">❯</a>
-        </div>
-      </div> 
-      <div id="slide4" class="rounded hero lg:h-[580px] carousel-item relative w-full" style="background-image: url('images/banner1.png');">
-        <div class="hero-overlay bg-opacity-70"></div>
-        <div class="text-center items-center -mt-16 lg:-mt-72">
-        <h1 class="text-white font-lato text-3xl lg:text-6xl font-black ">Exotic tastes at your <br> doorstep</h1>
-        </div>
-        <div class="mt-20 lg:-mt-12 text-center">
-            <p class="text-white text-[12px] lg:text-xl">We supply highly quality organic products</p>
-            <button class="border-none text-white mt-2 btn lg:mt-4 bg-rose-500">Shop Now</button>
-        </div>
-        <div class="absolute flex justify-between transform -translate-y-1/2 left-2 right-2 top-1/2">
-          <a href="#slide3" class="btn btn-circle text-white border-none bg-black">❮</a> 
-          <a href="#slide1" class="btn btn-circle text-white border-none bg-black">❯</a>
-        </div>
-      </div> 
+    <div class="relative hidden lg:flex">
+      <div class="absolute bg-white rounded-lg shadow-lg p-6 -mt-24 left-0 right-0 transform scale-60 mx-24">
+        <div class="flex gap-28 items-center justify-center text-center">
+                  <div>
+                    <img src="images/fruit1.png" alt="">
+                    <p>grapes</p>
+                  </div>
+                  <div>
+                    <img src="images/fruit2.png" alt="">
+                    <p>Orange</p>
+                  </div>
+                  <div>
+                    <img src="images/fruit3.png" alt="">
+                    <p>Mango</p>
+                  </div>
+                  <div>
+                    <img src="images/fruit4.png" alt="">
+                    <p>Strawberry</p>
+                  </div>
+                  <div>
+                    <img src="images/fruit5.png" alt="">
+                    <p>Pomegranate</p>
+                  </div>
+                </div>
+      </div>
     </div>
-  </section>
+  </div>
+  
+</section>
   <!-- slide section ended -->
   <!-- Deal of the day starting -->
-  <section>
+  <section class="lg:mt-28">
     <div class="my-4 flex flex-col lg:flex-row lg:justify-between items-center justify-center mt-10 text-center lg:text-left">
       <div class="">
           <h1 class="text-[40px] font-lato font-semibold">Deal of the day</h1>
@@ -176,8 +207,8 @@
             </div>
       </div>
       </div>
-    <div class=" grid lg:grid-cols-4 md:grid-cols-2 gap-5 items-center justify-around">
-      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+    <div class=" grid lg:grid-cols-4 md:grid-cols-2 gap-5 items-center justify-between">
+      <div class="card lg:w-80 w-[340px] md:w-auto border rounded-none">
           <div class="card-body text-center items-center">
               <img src="images/fruit6.png" alt="car!"/>
               <p class="text-xl font-bold">12.90$ - 18.85$</p>
@@ -199,7 +230,7 @@
             </div>
           </div>
         </div>
-      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+      <div class="card lg:w-80 w-[340px] md:w-auto border rounded-none">
           <div class="card-body text-center items-center">
               <img src="images/fruit7.png" alt="car!"/>
               <p class="text-xl font-bold">12.90$ - 18.85$</p>
@@ -221,7 +252,7 @@
             </div>
           </div>
         </div>
-      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+      <div class="card lg:w-80 w-[340px] md:w-auto border rounded-none">
           <div class="card-body text-center items-center">
               <img src="images/fruit8.png" alt="car!"/>
               <p class="text-xl font-bold">12.90$ - 18.85$</p>
@@ -243,7 +274,7 @@
             </div>
           </div>
         </div>
-      <div class="card lg:w-80 w-[360px] md:w-auto border rounded-none">
+      <div class="card lg:w-80 w-[340px] md:w-auto border rounded-none">
           <div class="card-body text-center items-center">
               <img src="images/fruit9.png" alt="car!"/>
               <p class="text-xl font-bold">12.90$ - 18.85$</p>
