--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
       </div>
       </div>
-    <div class=" grid lg:grid-cols-4 md:grid-cols-2 gap-5 items-center justify-between">
+    <div class=" grid lg:grid-cols-4 md:grid-cols-2 gap-5 items-center lg:justify-between justify-center">
       <div class="card lg:w-80 w-[340px] md:w-auto border rounded-none">
           <div class="card-body text-center items-center">
               <img src="images/fruit6.png" alt="car!"/>
